--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   json_theme: ^6.4.1+2
   wtf_sliding_sheet: ^1.1.0
   fan_side_drawer: ^1.0.2
+  google_fonts: ^6.2.1
+  fullscreen_image_viewer: ^0.0.6
   
   
 
