--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyDRI8rDw6a8QJgLYzHaQr4_-YW0HLA4MjQ</string>
+	<string>AIzaSyDRI8rDw6a/string>
 	<key>GCM_SENDER_ID</key>
 	<string>94467889300</string>
 	<key>PLIST_VERSION</key>
